--- a/app/globals.css
+++ b/app/globals.css
@@ -192,3 +192,19 @@ aside {
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
 }
+section {
+  scroll-margin-top: 50px; /* height of navbar */
+}
+
+@media (min-width: 768px) {
+  section {
+    scroll-margin-top: 10px; /* medium navbar */
+  }
+}
+
+/* Large screens / desktop */
+@media (min-width: 1024px) {
+  section {
+    scroll-margin-top: 10px; /* large navbar */
+  }
+}
